Fixed text box clipping on hover

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -85,7 +85,6 @@ body {
 
 .text {
     font-size: 90%;
-    border-radius: 0.5rem; /* 8px */
 }
 
 .footer {
