--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ body {
     bottom: 0;
     left: 0;
     z-index: 2;
+    border-radius: 0.5rem; /* 8px */
     background-color: rgba(188, 108, 37, 0.8);
     color: black;
     padding: 0 0.625rem; /* 0 10px */
